--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.8.1
 cloudinary==1.40.0
+dj-database-url==2.1.0
 Django==5.0.6
 django-cloudinary-storage==0.3.0
 pillow==10.3.0
+psycopg2==2.9.9
 pytz==2024.1
 sqlparse==0.5.0
