--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cloudinary==1.40.0
 dj-database-url==2.1.0
 Django==5.0.6
 django-cloudinary-storage==0.3.0
+gunicorn==22.0.0
 pillow==10.3.0
 psycopg2==2.9.9
 pytz==2024.1
