--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@ Django==5.0.6
 django-cloudinary-storage==0.3.0
 djangorestframework==3.15.1
 gunicorn==22.0.0
+iniconfig==2.0.0
 pillow==10.3.0
+pluggy==1.5.0
 psycopg2==2.9.9
+pytest==8.2.1
 pytz==2024.1
 sqlparse==0.5.0
