--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 cloudinary==1.40.0
 dj-database-url==2.1.0
+dj-rest-auth==6.0.0
 Django==5.0.6
 django-cloudinary-storage==0.3.0
 djangorestframework==3.15.1
