all files - tidyup

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==2.1.0
 dj-rest-auth==6.0.0
 Django==5.0.6
 django-cloudinary-storage==0.3.0
+django-extensions==3.2.3
 djangorestframework==3.15.1
 gunicorn==22.0.0
 iniconfig==2.0.0
