--- a/forge-focus-app-PP5/package.json
+++ b/forge-focus-app-PP5/package.json
@@ -49,11 +49,5 @@
     "eslint-plugin-react": "^7.34.2",
     "msw": "^0.35.0"
   },
-  "engines": {
-    "node": "16.19.1",
-    "npm": "8.19.3"
-  },
-  "lint": "eslint .",
-  "lint:fix": "eslint --fix",
-  "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+  "proxy": "http://localhost:8000"
 }
