--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,19 @@ coverage==7.5.3
 dj-database-url==2.1.0
 dj-rest-auth==6.0.0
 Django==5.0.6
+django-allauth==0.63.3
 django-cloudinary-storage==0.3.0
+django-cors-headers==4.3.1
 django-extensions==3.2.3
 djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
 gunicorn==22.0.0
 iniconfig==2.0.0
 pillow==10.3.0
 pluggy==1.5.0
 psycopg2==2.9.9
+PyJWT==2.8.0
 pytest==8.2.1
 pytz==2024.1
 sqlparse==0.5.0
+urllib3==1.26.15
