StudentSupport: a lot of edit with student support

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,25 @@ asgiref==3.8.1
 cloudinary==1.40.0
 coverage==7.5.3
 dj-database-url==2.1.0
-dj-rest-auth==6.0.0
-Django==5.0.6
-django-allauth==0.63.3
+dj-rest-auth==2.1.9
+Django==3.2.24
+django-allauth==0.44.0
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.3.1
 django-extensions==3.2.3
-djangorestframework==3.15.1
-djangorestframework-simplejwt==5.3.1
-gunicorn==22.0.0
+django-filter==23.5
+djangorestframework==3.14.0
+djangorestframework-simplejwt==4.7.2
+gunicorn==21.2.0
 iniconfig==2.0.0
+oauthlib==3.2.2
 pillow==10.3.0
 pluggy==1.5.0
 psycopg2==2.9.9
 PyJWT==2.8.0
 pytest==8.2.1
+python3-openid==3.2.0
 pytz==2024.1
+requests-oauthlib==2.0.0
 sqlparse==0.5.0
 urllib3==1.26.15
