--- a/forge-focus-app-PP5/package.json
+++ b/forge-focus-app-PP5/package.json
@@ -51,5 +51,5 @@
     "eslint-plugin-react": "^7.34.2",
     "msw": "^0.35.0"
   },
-  "proxy": "http://localhost:8000/"
+  "proxy": "http://localhost:8000"
 }
