--- a/requirements.txt
+++ b/requirements.txt
@@ -14,14 +14,16 @@ djangorestframework-simplejwt==4.7.2
 gunicorn==21.2.0
 iniconfig==2.0.0
 oauthlib==3.2.2
+packaging==23.2
 pillow==10.3.0
 pluggy==1.5.0
 psycopg2==2.9.9
+pygraphviz==1.13
 PyJWT==2.8.0
 pytest==8.2.1
 python3-openid==3.2.0
 pytz==2024.1
-requests-oauthlib==2.0.0
+requests-oauthlib==1.3.1
 sqlparse==0.5.0
 urllib3==1.26.15
 whitenoise==6.4.0
